# orchestrator/pkg/transport/handler/expressionHandler.go
@@ -10,6 +10,7 @@ import (
 	"github.com/sirupsen/logrus"
 )
 
+// GetExpressions godoc
 // @Summary      Get expressions
 // @Description  Get expressions
 // @Tags         expressions
@@ -21,33 +22,31 @@ import (
 // @Failure      400  {object}  map[string]string
 // @Failure      404  {object}  map[string]string
 // @Failure      500  {object}  map[string]string
-// @Router       /expression/ [get]
-
-func (h *Handler) GetExpressions() gin.HandlerFunc {
-	return func(c *gin.Context) {
-		recordPerPage, err := strconv.Atoi(c.Query("recordPerPage"))
-		if err != nil || recordPerPage < 1 {
-			recordPerPage = 10
-		}
-
-		page, err := strconv.Atoi(c.Query("page"))
-		if err != nil || page < 1 {
-			page = 1
-		}
-
-		startIndex := (page - 1) * recordPerPage
-		startIndex, err = strconv.Atoi(c.Query("startIndex"))
-
-		expressions, err := h.services.Expression.GetExpressions(startIndex, recordPerPage)
-		if err != nil {
-			logrus.Error(err.Error())
-			c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-			return
-		}
-		c.JSON(http.StatusOK, expressions)
+// @Router       /expressions/ [get]
+func (h *Handler) GetExpressions(c *gin.Context) {
+	recordPerPage, err := strconv.Atoi(c.Query("recordPerPage"))
+	if err != nil || recordPerPage < 1 {
+		recordPerPage = 10
 	}
+
+	page, err := strconv.Atoi(c.Query("page"))
+	if err != nil || page < 1 {
+		page = 1
+	}
+
+	startIndex := (page - 1) * recordPerPage
+	startIndex, err = strconv.Atoi(c.Query("startIndex"))
+
+	expressions, err := h.services.Expression.GetExpressions(startIndex, recordPerPage)
+	if err != nil {
+		logrus.Error(err.Error())
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+	c.JSON(http.StatusOK, expressions)
 }
 
+// GetExpression godoc
 // @Summary      Get expression
 // @Description  Get expression by id
 // @Tags         expressions
@@ -55,11 +54,10 @@ func (h *Handler) GetExpressions() gin.HandlerFunc {
 // @Produce      json
 // @Param        id   path      int  true  "Expression ID"
 // @Success      200  {object}  models.ExpressionToRead
-// @Failure      400  {object}  map{string}string
-// @Failure      404  {object}  map{string}string
-// @Failure      500  {object}  map{string}string
-// @Router       /expression/{id} [get]
-
+// @Failure      400  {object}  map[string]string
+// @Failure      404  {object}  map[string]string
+// @Failure      500  {object}  map[string]string
+// @Router       /expressions/{id} [get]
 func (h *Handler) GetExpression() gin.HandlerFunc {
 	return func(c *gin.Context) {
 		id := c.Param("id")
@@ -79,6 +77,7 @@ func (h *Handler) GetExpression() gin.HandlerFunc {
 	}
 }
 
+// AddExpression godoc
 // @Summary      Add expression
 // @Description  Add new expression
 // @Tags         expressions
@@ -86,11 +85,10 @@ func (h *Handler) GetExpression() gin.HandlerFunc {
 // @Produce      json
 // @Param        expression   body      models.Expression  true  "Expression info"
 // @Success      200  {object}  uuid.UUID
-// @Failure      400  {object}  map{string}string
-// @Failure      404  {object}  map{string}string
-// @Failure      500  {object}  map{string}string
-// @Router       /expression/ [post]
-
+// @Failure      400  {object}  map[string]string
+// @Failure      404  {object} map[string]string
+// @Failure      500  {object}  map[string]string
+// @Router       /expressions/ [post]
 func (h *Handler) CreateExpression() gin.HandlerFunc {
 	return func(c *gin.Context) {
 		var expression models.Expression
